// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Register component renders a Register page by default 1`] = `
<div>
  <Navbar />
  <section
    className="loginBG"
  >
    <form
      className="login"
      onSubmit={[Function]}
    >
      <section
        className="regError"
        role="alert"
      />
      <img
        alt="paw"
        src="paw.png"
      />
      <label>
        Name
      </label>
      <input
        name="fullname"
        placeholder="EJ Gonzalez"
        required={true}
        type="text"
      />
      <label>
        Username
      </label>
      <input
        name="user_name"
        placeholder="puppy_lover132"
        required={true}
        type="user_name"
      />
      <label>
        Password
      </label>
      <input
        name="password"
        placeholder="********"
        required={true}
        type="password"
      />
      <label>
        Re-enter Password
      </label>
      <input
        name="re_enter_password"
        placeholder="********"
        required={true}
        type="password"
      />
      <button
        type="submit"
      >
        Submit
      </button>
    </form>
    <p
      className="validation"
    >
      <Component />
    </p>
  </section>
  <footer>
    © EJ Gonzalez 2019
  </footer>
</div>
`;

exports[`Register component renders a section with the Register 1`] = `
<section
  className="loginBG"
>
  <form
    className="login"
    onSubmit={[Function]}
  >
    <section
      className="regError"
      role="alert"
    />
    <img
      alt="paw"
      src="paw.png"
    />
    <label>
      Name
    </label>
    <input
      name="fullname"
      placeholder="EJ Gonzalez"
      required={true}
      type="text"
    />
    <label>
      Username
    </label>
    <input
      name="user_name"
      placeholder="puppy_lover132"
      required={true}
      type="user_name"
    />
    <label>
      Password
    </label>
    <input
      name="password"
      placeholder="********"
      required={true}
      type="password"
    />
    <label>
      Re-enter Password
    </label>
    <input
      name="re_enter_password"
      placeholder="********"
      required={true}
      type="password"
    />
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
  <p
    className="validation"
  >
    <Component />
  </p>
</section>
`;
